# cryptopals

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: aes_128.rs  ascii_frequencies_en.rs  base64_to_bytes.rs  bytes_frequency.rs  bytes_to_base64.rs  bytes_to_hex.rs  chi_square.rs  chi_squared.rs  hamming_distance.rs  hex_to_bytes.rs  lib.rs  pkcs7.rs  set_1_challenge_1.rs  set_1_challenge_2.rs  set_1_challenge_3.rs  set_1_challenge_4.rs  xor_bytes.rs
tests/: main.rs
tests/solutions/: mod.rs  set1_challenge1.rs  set1_challenge2.rs  set1_challenge3.rs  set1_challenge4.rs  set1_challenge5.rs  set1_challenge6.rs  set1_challenge7.rs  set1_challenge8.rs  set2_challenge10.rs  set2_challenge9.rs
